# xenia.cmake

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  generate_version_h.py
cmake/: platform_files.cmake  xenia-app-discord.cmake  xenia-app.cmake  xenia-apu-nop.cmake  xenia-apu-sdl.cmake  xenia-apu-xaudio2.cmake  xenia-apu.cmake  xenia-base-tests.cmake  xenia-base.cmake  xenia-core.cmake  xenia-cpu-backend-x64.cmake  xenia-cpu-ppc-tests.cmake  xenia-cpu-tests.cmake  xenia-cpu.cmake  xenia-debug-ui.cmake  xenia-gpu-d3d12-trace-dump.cmake  xenia-gpu-d3d12-trace-viewer.cmake  xenia-gpu-d3d12.cmake  xenia-gpu-null.cmake  xenia-gpu-shader-compiler.cmake  xenia-gpu-vk.cmake  xenia-gpu-vulkan-trace-dump.cmake  xenia-gpu-vulkan-trace-viewer.cmake  xenia-gpu-vulkan.cmake  xenia-gpu.cmake  xenia-hid-demo.cmake  xenia-hid-nop.cmake  xenia-hid-sdl.cmake  xenia-hid-sdlpad.cmake  xenia-hid-winkey.cmake  xenia-hid-xinput.cmake  xenia-hid.cmake  xenia-kernel.cmake  xenia-ui-d3d12.cmake  xenia-ui-spirv.cmake  xenia-ui-vk.cmake  xenia-ui-vulkan.cmake  xenia-ui.cmake  xenia-vfs-dump.cmake  xenia-vfs.cmake
